[gd_scene load_steps=27 format=2]

[ext_resource path="res://Scripts/CompatAlert.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/therok-regular-400.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Fonts/fredoka-one/FredokaOne-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Fonts/fredoka-one/FredokaOne-Regular.otf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/Fonts/Titillium/Titillium-RegularItalic.otf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/Fonts/Titillium/Titillium-Bold.otf" type="DynamicFontData" id=6]
[ext_resource path="res://Assets/Fonts/Titillium/Titillium-Regular.otf" type="DynamicFontData" id=7]
[ext_resource path="res://Assets/GUI/Item2.png" type="Texture" id=8]
[ext_resource path="res://Assets/GUI/Blue_Square.png" type="Texture" id=9]
[ext_resource path="res://Assets/Fonts/Kaph-Regular.otf" type="DynamicFontData" id=10]
[ext_resource path="res://Assets/GUI/gears2d2.png" type="Texture" id=11]
[ext_resource path="res://Assets/ButtonsIcons/IconButton_Large_Blue_Circle.png" type="Texture" id=12]
[ext_resource path="res://Assets/GUI/IconButton_Large_Orange_Circle_Pressed.png" type="Texture" id=13]
[ext_resource path="res://Assets/GUI/Icon_Exit.png" type="Texture" id=14]
[ext_resource path="res://Assets/GUI/IconButton_Large_Orange_Circle.png" type="Texture" id=15]
[ext_resource path="res://Assets/Images/blackScreen.png" type="Texture" id=16]
[ext_resource path="res://Assets/Fonts/Titillium/Titillium-BoldItalic.otf" type="DynamicFontData" id=17]

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 16 )
region_rect = Rect2( 0, 0, 1800, 1200 )

[sub_resource type="DynamicFont" id=8]
size = 37
outline_size = 2
outline_color = Color( 0.235294, 0.235294, 0.235294, 1 )
use_filter = true
font_data = ExtResource( 10 )
fallback/0 = ExtResource( 2 )

[sub_resource type="DynamicFont" id=11]
size = 30
outline_size = 2
outline_color = Color( 0.313726, 0.027451, 0.0627451, 1 )
use_filter = true
font_data = ExtResource( 4 )
fallback/0 = ExtResource( 2 )

[sub_resource type="DynamicFont" id=12]
size = 30
use_filter = true
font_data = ExtResource( 3 )
fallback/0 = ExtResource( 2 )

[sub_resource type="DynamicFont" id=13]
size = 25
outline_size = 2
outline_color = Color( 0.313726, 0.027451, 0.0627451, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 17 )

[sub_resource type="DynamicFont" id=14]
size = 25
outline_size = 2
outline_color = Color( 0.313726, 0.027451, 0.0627451, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=15]
size = 25
outline_size = 2
outline_color = Color( 0.313726, 0.027451, 0.0627451, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=16]
size = 25
outline_color = Color( 0.313726, 0.027451, 0.0627451, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 12 )
region_rect = Rect2( 0, 0, 356, 357 )

[node name="PopupDialog" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 10 )
__meta__ = {
"_edit_lock_": true
}

[node name="shadow" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0.545098 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.0556641
anchor_top = 0.0733333
anchor_right = 0.949219
anchor_bottom = 0.906667
mouse_filter = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="PanelPopup" type="NinePatchRect" parent="CenterContainer"]
margin_right = 915.0
margin_bottom = 500.0
rect_min_size = Vector2( 915, 500 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="panel" type="TextureRect" parent="CenterContainer/PanelPopup"]
anchor_left = 0.171585
anchor_top = -0.06
anchor_right = 0.83388
anchor_bottom = 0.106
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="babala" type="Label" parent="CenterContainer/PanelPopup/panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.886275, 0.317647, 0.27451, 1 )
custom_colors/font_color_shadow = Color( 0.580392, 0.247059, 0.286275, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 8 )
text = "kompatibleng babala"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true
}

[node name="faqs" type="Label" parent="CenterContainer/PanelPopup"]
anchor_left = 0.0218579
anchor_top = 0.104
anchor_right = 0.980328
anchor_bottom = 0.198
custom_colors/font_color = Color( 0.886275, 0.317647, 0.27451, 1 )
custom_colors/font_color_shadow = Color( 0.580392, 0.247059, 0.286275, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 11 )
text = "Mga Kadalasang Katanungan"
align = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="faqs" type="Label" parent="CenterContainer/PanelPopup/faqs"]
anchor_left = -0.00228055
anchor_right = 1.0
anchor_bottom = 1.06383
custom_colors/font_color = Color( 1, 0.643137, 0.215686, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 12 )
text = "Mga Kadalasang Katanungan"
align = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="RichTextLabel" type="RichTextLabel" parent="CenterContainer/PanelPopup"]
anchor_left = 0.0185792
anchor_top = 0.198
anchor_right = 0.979235
anchor_bottom = 0.96
custom_colors/default_color = Color( 1, 0.643137, 0.215686, 1 )
custom_colors/selection_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_selected = Color( 0.282353, 0.172549, 0.898039, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
custom_fonts/bold_italics_font = SubResource( 13 )
custom_fonts/italics_font = SubResource( 14 )
custom_fonts/bold_font = SubResource( 15 )
custom_fonts/normal_font = SubResource( 16 )
bbcode_enabled = true
bbcode_text = "[b][u]1. Bakit hindi gumagana ang laro sa Cellphone ko?[/u][/b]
[b]Sagot:
	Maaring an iyong kasalukuyang Version ng Android ay luma na. Ang minimum required ng ay Android 5 (Lollipop). Upang maresolbahan ito, maaring palitan ang kasalukuyang cellphone ng bago i.e Android 10, o pwede mo rin i-download ang laro para sa iyong computer, pindutin lamang ito > '[color=aqua][url=https://github.com/Moggle-Khraum/Crude_Paint_Program]Toofia PC[/url][/color]' <.
	
[b][u]1. Bakit hindi gumagana ang laro sa iOS device ko?[/u][/b]
[b]Sagot:
	Ang laro ay hindi talaga gagana sa iOS dahil ito ay para sa Android lamang. Hindi  kasali sa plano ng mga developers at dahil sa mga problema sa pag export ng laro sa iOS platform. Maaring i-download ang PC-version ng laro."
text = "1. Bakit hindi gumagana ang laro sa Cellphone ko?
Sagot:
	Maaring an iyong kasalukuyang Version ng Android ay luma na. Ang minimum required ng ay Android 5 (Lollipop). Upang maresolbahan ito, maaring palitan ang kasalukuyang cellphone ng bago i.e Android 10, o pwede mo rin i-download ang laro para sa iyong computer, pindutin lamang ito > 'Toofia PC' <.
	
1. Bakit hindi gumagana ang laro sa iOS device ko?
Sagot:
	Ang laro ay hindi talaga gagana sa iOS dahil ito ay para sa Android lamang. Hindi  kasali sa plano ng mga developers at dahil sa mga problema sa pag export ng laro sa iOS platform. Maaring i-download ang PC-version ng laro."
fit_content_height = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 69, 56 )
scale = Vector2( 0.22, 0.22 )
__meta__ = {
"_edit_lock_": true
}

[node name="cog1" type="Sprite" parent="Node2D"]
unique_name_in_owner = true
show_behind_parent = true
position = Vector2( -1.12057e-05, 3.64642 )
scale = Vector2( 0.104315, 0.104754 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="cog2" type="Sprite" parent="Node2D"]
unique_name_in_owner = true
show_behind_parent = true
position = Vector2( 4018.17, 4.54541 )
scale = Vector2( 0.104315, 0.104754 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="Node2D2" type="Node2D" parent="."]
position = Vector2( 71, 533 )
scale = Vector2( 0.22, 0.22 )
__meta__ = {
"_edit_lock_": true
}

[node name="cog3" type="Sprite" parent="Node2D2"]
unique_name_in_owner = true
show_behind_parent = true
position = Vector2( -1.12057e-05, 3.64642 )
scale = Vector2( 0.104315, 0.104754 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="cog4" type="Sprite" parent="Node2D2"]
unique_name_in_owner = true
show_behind_parent = true
position = Vector2( 4018.17, 4.54541 )
scale = Vector2( 0.104315, 0.104754 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="knobs" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 0.175
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="knob1" type="Panel" parent="knobs"]
anchor_left = 0.917969
anchor_top = 0.419048
anchor_right = 0.943359
anchor_bottom = 0.666667
custom_styles/panel = SubResource( 9 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="knob0" type="Panel" parent="knobs"]
anchor_left = 0.0546875
anchor_top = 0.419048
anchor_right = 0.0800781
anchor_bottom = 0.666667
custom_styles/panel = SubResource( 9 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="knobs2" type="Control" parent="."]
anchor_left = 0.00195313
anchor_top = 0.795
anchor_right = 1.00195
anchor_bottom = 0.97
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="knob1" type="Panel" parent="knobs2"]
anchor_left = 0.917969
anchor_top = 0.419048
anchor_right = 0.943359
anchor_bottom = 0.666667
custom_styles/panel = SubResource( 9 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="knob0" type="Panel" parent="knobs2"]
anchor_left = 0.0546875
anchor_top = 0.419048
anchor_right = 0.0800781
anchor_bottom = 0.666667
custom_styles/panel = SubResource( 9 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="exit" type="TextureButton" parent="."]
anchor_left = 0.423828
anchor_top = 0.816667
anchor_right = 0.521484
anchor_bottom = 0.978333
margin_top = 3.05176e-05
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 13 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="exitHome" type="TextureRect" parent="exit"]
anchor_left = 0.16
anchor_top = 0.164948
anchor_right = 0.84
anchor_bottom = 0.85567
texture = ExtResource( 14 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
